<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dachuang.MainActivity" 
    >

    <!--
         As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions.
    -->

    <FrameLayout
        android:id="@+id/container"
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--
         android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead.
    -->
    <!--
         The drawer is given a fixed width in dp and extends the full height of
         the container.
    -->

    <fragment
        android:id="@+id/navigation_drawer"
        android:name="com.example.dachuang.NavigationDrawerFragment"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:layout="@layout/fragment_navigation_drawer" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/string1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string1"
        android:textSize="30sp"
        />
    <!--  
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_section2"
        android:textSize="35sp"
        />
   <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_section3"
        android:textSize="35sp"
        />
        -->
  <Button
        android:id="@+id/b1"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/title_section1"
        android:textSize="35sp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/action_example"
        android:textSize="35sp"
        />
    
   <Button
        android:id="@+id/b2"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/title_section2"
        android:textSize="35sp"
        />
   

   <Button
       android:id="@+id/b3"
       android:layout_width="360dp"
       android:layout_height="60dp"
       android:layout_gravity="center"
       android:text="@string/title_section3"
       android:textSize="35sp"
        />
   
     </LinearLayout>
     
</android.support.v4.widget.DrawerLayout>
